--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,11 @@
   margin: 30px auto;
   text-align: center;
 }
+
+.App-footer {
+  font-size: 10px;
+  text-align: center;
+  max-width: 400px;
+  display: block;
+  margin: 30px auto;
+}
