--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App-header {
-  margin: 30px auto;
+  margin: 0 auto;
   text-align: center;
+  padding-top: 25px;
 }
 
 .App-footer {
@@ -8,5 +9,7 @@
   text-align: center;
   max-width: 400px;
   display: block;
-  margin: 30px auto;
+  margin: 0px auto;
+  padding-bottom: 25px;
+  color: rgb(236, 222, 195);
 }
