--- a/src/Dictionary.css
+++ b/src/Dictionary.css
@@ -1,11 +1,54 @@
+.Dictionary section {
+  background: rgba(154, 123, 79, 0.8);
+  padding: 25px;
+  border-radius: 6px;
+  box-shadow: 4px 4px 6px rgba(0, 0, 0, 0.7);
+  margin: 15px auto;
+  max-width: 800px;
+  display: block;
+}
+
+.Dictionary h2 {
+    font-size: 20px;
+    font-weight: bold;
+     color:#2c1503;
+
+}
+
+.Dictionary .search {
+  padding: 4px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  width: 500px;
+  margin-right: 10px;
+  display: inline-block;
+  
+}
+
+.Dictionary .submit {
+    padding: 3px;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  width: 80px;
+  color: #9a7b4f;
+  background: #2c1503;
+  display: inline-block;
+  border: 2px solid #2c1503;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 10ms ease-in;
+  
+}
+
+.Dictionary .submit:hover {
+   color: #2c1503;
+  background: #9a7b4f; 
+  border: 2px solid #2c1503;
+}
+
+
 form {
-    text-align: center;
-}
-
-.Phonetics img {
-    width: 20px;
-}
-
-.Phonetics img:hover {
-cursor: pointer;
+  text-align: center;
+  width: 100%;
+  
 }
