--- a/src/Meaning.css
+++ b/src/Meaning.css
@@ -1,12 +1,17 @@
 .Meaning h3 {
-color: peru;
-font-size: 24px;
-line-height: 1.5;
-font-weight: bold;
+  color: #632a0d;
+  font-size: 24px;
+  line-height: 1.5;
+  font-weight: bold;
+}
+
+.Meaning .definition {
+  text-align: justify;
+  font-weight: 500;
+  padding-bottom: 10px;
 }
 
 .Meaning .example {
-    font-size: 13px;
-    opacity:0.8;
-    font-style:italic;
+  font-size: 14px;
+  font-style: italic;
 }
